# nrf-spm-rs

./: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
sample-nonsecure/: Cargo.toml
sample-nonsecure/src/: main.rs
src/: lib.rs  main.rs
