[package]
name = "nrf-spm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
nrf9160-pac = "0.12"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
cortex-m = { path = "../cortex-m" }
